--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
-    "buildRelease": "cd android && ./gradlew assembleRelease",
-    "installRelease": "cd android && ./gradlew installRelease"
+    "test": "make test",
+    "flow_check": "flow check || exit 0"
   },
   "dependencies": {
     "@remobile/react-native-splashscreen": "^1.0.3",
     "alt": "^0.18.1",
-    "react-native": "^0.18.0",
+    "react": "^15.4.1",
+    "react-native": "0.42.0",
     "react-native-action-button": "^1.0.8",
     "react-native-android-statusbar": "^0.1.2",
     "react-native-material-design": "git+https://github.com/react-native-material-design/react-native-material-design.git"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.40.0"
   }
 }
